tests/script_runtime_errors/bad_fold_type_imut/error.txt
Error: 
    1 | (for event of
    2 |   case (k,v) => [k, v]
      |                 ^^^^^^ Type error: Expected object, found array
    3 | into {} end)